# css-inline

./: .gitignore  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Mayhemfile  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: build.yml  c-release.yml  codspeed.yml  java-release.yml  javascript-release.yml  mayhem.yml  pages.yml  php-release.yml  python-release.yml  ruby-release.yml  rust-release.yml  wasm-release.yml
benches/: inliner.rs
benchmarks/: benchmarks.json
bindings/c/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/c/src/: lib.rs
bindings/c/tests/: main.c
bindings/java/: CHANGELOG.md  Cargo.toml  README.md  build.gradle  settings.gradle
bindings/java/src/jmh/java/org/cssinline/: CSSBoxInliner.java  CSSInlineBench.java
bindings/java/src/main/java/org/cssinline/: CssInline.java  CssInlineConfig.java  CssInlineException.java  NativeLibraryLoader.java
bindings/java/src/main/rust/: lib.rs
bindings/java/src/test/java/org/cssinline/: CssInlineTest.java
bindings/javascript/: .eslintrc.yml  CHANGELOG.md  Cargo.toml  README.md  bundle.js  index.d.ts  index.js  js-binding.d.ts  js-binding.js  package.json  wasm-binding.ts
bindings/javascript/.cargo/: config.toml
bindings/javascript/__test__/: index.spec.mjs  index.spec.ts  wasm.spec.ts
bindings/javascript/benches/: bench.ts
bindings/javascript/npm/android-arm-eabi/: README.md  package.json
bindings/javascript/npm/android-arm64/: README.md  package.json
bindings/javascript/npm/darwin-arm64/: README.md  package.json
bindings/javascript/npm/darwin-x64/: README.md  package.json
bindings/javascript/npm/freebsd-x64/: README.md  package.json
bindings/javascript/npm/linux-arm-gnueabihf/: README.md  package.json
bindings/javascript/npm/linux-arm64-gnu/: README.md  package.json
bindings/javascript/npm/linux-arm64-musl/: README.md  package.json
bindings/javascript/npm/linux-x64-gnu/: README.md  package.json
bindings/javascript/npm/linux-x64-musl/: README.md  package.json
bindings/javascript/npm/win32-arm64-msvc/: README.md  package.json
bindings/javascript/npm/win32-x64-msvc/: README.md  package.json
bindings/javascript/src/: errors.rs  lib.rs  options.rs
bindings/javascript/wasm/: README.md  index.d.ts  index.html  index.js  index.min.js  index.mjs  index_bg.wasm  package.json
bindings/php/: .gitignore  .php-cs-fixer.dist.php  CHANGELOG.md  Cargo.toml  README.md  composer.json  phpbench.json  phpunit.xml
bindings/php/.cargo/: config.toml
bindings/php/benchmarks/: InlineBench.php
bindings/php/src/: lib.rs
bindings/php/stubs/: css_inline.php
bindings/php/tests/: CssInlineTest.php
bindings/python/: .gitignore  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  README.rst  build-sdist.sh  css_inline.pyi  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.py  tox.ini
bindings/python/benches/: bench.py
bindings/python/requirements/: bench.in  bench.txt  dev.txt  test.txt
bindings/python/src/: lib.rs
bindings/python/tests-py/: test_inlining.py
bindings/ruby/: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  README.md  Rakefile  css_inline.gemspec
bindings/ruby/ext/css_inline/: Cargo.toml  extconf.rb
bindings/ruby/ext/css_inline/src/: lib.rs
bindings/ruby/lib/: css_inline.rb
bindings/ruby/spec/: css_inline_spec.rb
bindings/ruby/test/: bench.rb
bindings/wasm/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
bindings/wasm/src/: lib.rs
bindings/wasm/tests-ts/: css_inline.spec.ts
css-inline/: Cargo.toml
css-inline/benches/: inliner.rs  styles.css
css-inline/fuzz/: Cargo.toml
css-inline/fuzz/fuzz_targets/: inline.rs
css-inline/src/: error.rs  hasher.rs  lib.rs  main.rs  parser.rs  resolver.rs
css-inline/src/html/: attributes.rs  document.rs  element.rs  iter.rs  mod.rs  node.rs  parser.rs  serializer.rs
css-inline/src/html/selectors/: attr_value.rs  local_name.rs  mod.rs  parser.rs  pseudo_classes.rs  pseudo_elements.rs  selector_impl.rs
css-inline/tests/: example.html  extra.css  invalid-example.html  requirements-test.in  requirements-test.txt  server.py  test_cli.rs  test_inlining.rs  test_selectors.rs  utils.rs
docs/: CNAME  README.md  index.d.ts  index.html  index.js  index.min.js  index.mjs  index_bg.wasm  package.json
profiler/: Cargo.toml
profiler/src/: main.rs
python/: CHANGELOG.md  Cargo.toml  README.rst  setup.py  tox.ini
python/benches/: bench.py
python/src/: lib.rs
python/tests-py/: test_inlining.py
src/: error.rs  lib.rs  main.rs  parse.rs  parser.rs
tests/: server.py  test_inlining.rs
wasm/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
wasm/src/: lib.rs
wasm/tests-ts/: css_inline.spec.ts
