[package]
name = "css-inline"
version = "0.1.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A crate for inlining CSS into HTML documents"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["html", "css"]
exclude = [".github", ".pre-commit-config.yaml", ".yamllint", ".gitignore"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "*"
kuchiki = "0.8"
