[package]
name = "css-inline"
version = "0.2.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A crate for inlining CSS into HTML documents"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["html", "css", "css-inline"]
exclude = [".github", ".pre-commit-config.yaml", ".yamllint", ".gitignore", "tests"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "0"
kuchiki = "0.8"
attohttpc = "0"
url = "2"

[dev-dependencies]
criterion = ">= 0.1"

[[bench]]
name = "inliner"
harness = false

[profile.release]
debug = true
