[package]
name = "css-inline"
version = "0.3.2"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "A crate for inlining CSS into HTML documents"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["html", "css", "css-inline"]
exclude = [".github", ".pre-commit-config.yaml", ".yamllint", ".gitignore", "tests"]
categories = ["web-programming"]

[[bin]]
name = "css-inline"

[features]
default = ["cli"]
cli = ["pico-args", "rayon"]

[dependencies]
cssparser = "0"
kuchiki = "0.8"
attohttpc = "0"
url = "2"
pico-args = { version = "0.3.2", optional = true }
rayon = { version = "1.3.1", optional = true }

[dev-dependencies]
criterion = ">= 0.1"

[[bench]]
name = "inliner"
harness = false
