[package]
name = "profiler"
version = "0.1.0"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"

[dependencies]
pico-args = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dhat = "*"

[dependencies.css-inline]
path = "../css-inline"
version = "*"
default-features = false
features = ["http", "file"]

[features]
dhat-heap = []

[profile.release]
debug = true
