[package]
name = "css-inline-wasm"
version = "0.3.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies.css-inline]
path = ".."
version = "= 0.3.3"
default-features = false

[dependencies]
url = "2"
wasm-bindgen = "0.2"
