[package]
name = "css-inline-wasm"
version = "0.3.0"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies.css-inline]
path = ".."
version = "= 0.4.0"
default-features = false

[dependencies]
url = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
codegen-units = 1
lto = "fat"
