[package]
name = "css-inline-c"
version = "0.12.0"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http-blocking", "file"]
