[package]
name = "css_inline"
version = "0.16.0"
edition = "2024"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]

[lib]
crate-type = ["cdylib"]
path = "src/main/rust/lib.rs"

[dependencies]
jni = "0.21.1"

[dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http", "file", "stylesheet-cache"]
