[package]
edition = "2021"
name = "css-inline-js"
version = "0.11.2"

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "2.14.1", default-features = false, features = ["napi4"] }
napi-derive = "2.14.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.6"
js-sys = "0.3.64"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"], default-features = false }

[dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http", "file"]

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
codegen-units = 1
