[package]
name = "css-inline-js"
version = "0.14.1"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"
readme = "README.md"
description = "High-performance library for inlining CSS into HTML 'style' attributes"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["css", "html", "email", "stylesheet", "inlining"]
categories = ["web-programming"]
license = "MIT"
rust-version = "1.70"
include = ["src/*.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(any(target_os = "linux", target_family = "wasm")))'.dependencies]
mimalloc = "0.1"

[target.'cfg(all(target_os = "linux", not(target_arch = "arm")))'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "2.14.1", default-features = false, features = ["napi4"] }
napi-derive = "2.14.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Pinned due to a bug in the return type: https://github.com/rustwasm/wasm-bindgen/pull/4210
wasm-bindgen = "=0.2.93"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http", "file", "stylesheet-cache"]

[target.'cfg(target_arch = "wasm32")'.dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
