[package]
name = "css-inline-python"
version = "0.14.6"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"
rust-version = "1.71.1"
include = ["src/lib.rs", "README.md", "CHANGELOG.md", "build.rs"]

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.7.1", features = ["cargo-lock", "chrono"] }

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module", "abi3-py37"] }
pyo3-built = "0.5"
rayon = "1"
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["stylesheet-cache"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http", "file", "stylesheet-cache"]

[profile.release]
codegen-units = 1
lto = "fat"
