[package]
name = "css-inline-python"
version = "0.14.6"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"
rust-version = "1.71.1"
include = ["src/lib.rs", "README.md", "CHANGELOG.md", "build.rs"]

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[build-dependencies]
built = { version = "0.8.0", features = ["cargo-lock", "chrono"] }

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py39"] }
pyo3-built = "0.6"
rayon = "1"
url = "2"

[target.'cfg(target_arch = "wasm32")'.dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["stylesheet-cache"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http", "file", "stylesheet-cache"]

[profile.release]
codegen-units = 1
lto = "fat"
