[tool.black]
line-length = 120
target_version = ["py37"]

[tool.isort]
# config compatible with Black
line_length = 120
multi_line_output = 3
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = "css_inline"
known_third_party = []

[project]
name = "css-inline"
description = "Fast CSS inlining written in Rust"
authors = [
    {name = "Dmitry Dygalo", email = "dadygalo@gmail.com"}
]
license = { text = "MIT" }
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
]
dependencies = []
requires-python = ">=3.7"

[project.urls]
homepage = "https://github.com/Stranger6667/css-inline/tree/master/bindings/python"
repository = "https://github.com/Stranger6667/css-inline"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
strip = true
