[package]
name = "css-inline-wasm"
version = "0.7.5"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "A WASM package for inlining CSS into HTML documents"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["html", "css", "css-inline"]
categories = ["web-programming"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false

[dependencies]
url = "2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde = { version = "1.0", features = ["derive"] }
wee_alloc = "0.4"
serde_derive = "1"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
opt-level = "z"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
