[package]
name = "css-inline-wasm"
version = "0.8.4"
authors = ["Dmitry Dygalo <dadygalo@gmail.com>"]
edition = "2021"
readme = "README.md"
description = "A WASM package for inlining CSS into HTML documents"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["html", "css", "css-inline"]
categories = ["web-programming"]
license = "MIT"
rust-version = "1.60"

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.145", features = ["derive"], default-features = false }
serde_json = "1.0.85"
url = "2.3.1"
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }

[dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http", "file"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
opt-level = "z"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
