[package]
name = "css-inline-wasm"
version = "0.10.5"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"
readme = "README.md"
description = "High-performance library for inlining CSS into HTML 'style' attributes"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["css", "html", "email", "stylesheet", "inlining"]
categories = ["web-programming"]
license = "MIT"
rust-version = "1.63"
include = ["src/lib.rs", "LICENSE", "README.md", "CHANGELOG.md"]

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = { version = "0.2" }

[dependencies.css-inline]
path = "../../css-inline"
version = "*"
default-features = false
features = ["http", "file"]

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
opt-level = "z"
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
