[package]
name = "css-inline"
version = "0.17.0"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2021"
readme = "README.rdoc"
description = "High-performance library for inlining CSS into HTML 'style' attributes"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["css", "html", "email", "stylesheet", "inlining"]
categories = ["web-programming"]
license = "MIT"
rust-version = "1.82"

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.7"
rayon = "1"

[dependencies.css-inline]
version = "0.17"
default-features = false
features = ["http", "file", "stylesheet-cache"]
