[package]
name = "css-inline-ruby"
version = "0.19.1"
authors = ["Dmitry Dygalo <dmitry@dygalo.dev>"]
edition = "2024"
readme = "README.rdoc"
description = "High-performance library for inlining CSS into HTML 'style' attributes"
repository = "https://github.com/Stranger6667/css-inline"
keywords = ["css", "html", "email", "stylesheet", "inlining"]
categories = ["web-programming"]
license = "MIT"
rust-version = "1.85"

[lib]
name = "css_inline"
crate-type = ["cdylib"]

[dependencies]
magnus = "0.8"
rayon = "1"

[dependencies.css-inline]
version = "0.19.1"
default-features = false
features = ["http", "file", "stylesheet-cache"]
